ghc-6.2/hslibs/win32/Win32Registry_stub_ffi.h

extern void* prim_hKEY_CLASSES_ROOT();
extern void* access_prim_hKEY_CLASSES_ROOT_gc_res3(HsPtr);
extern HKEY access_prim_hKEY_CLASSES_ROOT_gc_res1(HsPtr);
extern void* prim_hKEY_CURRENT_CONFIG();
extern void* access_prim_hKEY_CURRENT_CONFIG_gc_res3(HsPtr);
extern HKEY access_prim_hKEY_CURRENT_CONFIG_gc_res1(HsPtr);
extern void* prim_hKEY_CURRENT_USER();
extern void* access_prim_hKEY_CURRENT_USER_gc_res3(HsPtr);
extern HKEY access_prim_hKEY_CURRENT_USER_gc_res1(HsPtr);
extern void* prim_hKEY_LOCAL_MACHINE();
extern void* access_prim_hKEY_LOCAL_MACHINE_gc_res3(HsPtr);
extern HKEY access_prim_hKEY_LOCAL_MACHINE_gc_res1(HsPtr);
extern void* prim_hKEY_USERS();
extern void* access_prim_hKEY_USERS_gc_res3(HsPtr);
extern HKEY access_prim_hKEY_USERS_gc_res1(HsPtr);
extern void* prim_regCloseKey(HKEY arg1);
extern int access_prim_regCloseKey_gc_failed(HsPtr);
extern void* access_prim_regCloseKey_gc_failstring(HsPtr);
extern void* prim_regConnectRegistry(char * arg1,HKEY arg2);
extern void* access_prim_regConnectRegistry_gc_res3(HsPtr);
extern HKEY access_prim_regConnectRegistry_gc_res1(HsPtr);
extern int access_prim_regConnectRegistry_gc_failed(HsPtr);
extern void* access_prim_regConnectRegistry_gc_failstring(HsPtr);
extern void* prim_regCreateKey(HKEY arg1,char * arg2);
extern void* access_prim_regCreateKey_gc_res3(HsPtr);
extern HKEY access_prim_regCreateKey_gc_res1(HsPtr);
extern int access_prim_regCreateKey_gc_failed(HsPtr);
extern void* access_prim_regCreateKey_gc_failstring(HsPtr);
extern int prim_rEG_OPTION_NON_VOLATILE();
extern int prim_rEG_OPTION_VOLATILE();
extern int prim_kEY_ALL_ACCESS();
extern int prim_kEY_CREATE_LINK();
extern int prim_kEY_CREATE_SUB_KEY();
extern int prim_kEY_ENUMERATE_SUB_KEYS();
extern int prim_kEY_EXECUTE();
extern int prim_kEY_NOTIFY();
extern int prim_kEY_QUERY_VALUE();
extern int prim_kEY_READ();
extern int prim_kEY_SET_VALUE();
extern int prim_kEY_WRITE();