ghc-6.2/hslibs/win32/Win32Registry.hs


--Stubs for Win32 API for accessing the registry.
module Win32Registry 
		( module Win32Registry
		, MbString
		) where
{- What's really on offer:
	(
	  regCloseKey        -- :: HKEY -> IO ()
	, regConnectRegistry -- :: MbString -> HKEY -> IO HKEY
	, regCreateKey       -- :: HKEY -> String -> IO HKEY
	, regCreateKeyEx     -- :: HKEY -> String -> String 
	                     -- -> RegCreateOptions -> REGSAM
			     -- -> MbLPSECURITY_ATTRIBUTES 
			     -- -> IO (HKEY, Bool)
        , regDeleteKey       -- :: HKEY -> String -> IO ()
	, regDeleteValue     -- :: HKEY -> String -> IO ()
	, regEnumKeys	     -- :: HKEY -> IO [String]
	, regEnumKey 	     -- :: HKEY -> DWORD -> Addr -> DWORD -> IO String
	, regEnumKeyValue    -- :: HKEY -> DWORD -> Addr -> DWORD -> Addr -> DWORD -> IO String
	, regFlushKey        -- :: HKEY -> IO ()
	, regLoadKey         -- :: HKEY -> String -> String -> IO ()
	, regNotifyChangeKeyValue -- :: HKEY -> Bool -> RegNotifyOptions 
				  -- -> HANDLE -> Bool -> IO ()
	, regOpenKey         -- :: HKEY -> String -> IO HKEY
	, regOpenKeyEx 	     -- :: HKEY -> String -> REGSAM -> IO HKEY
	, regQueryInfoKey    -- :: HKEY -> IO RegInfoKey
	, regQueryValue      -- :: HKEY -> MbString -> IO String
	, regQueryValueKey   -- :: HKEY -> MbString -> IO String
	, regQueryValueEx    -- :: HKEY -> String -> Addr -> Int -> IO RegValueType
	, regReplaceKey      -- :: HKEY -> String -> String -> String -> IO ()
	, regRestoreKey      -- :: HKEY -> String -> RegRestoreFlags -> IO ()
	, regSaveKey         -- :: HKEY -> String -> MbLPSECURITY_ATTRIBUTES -> IO ()
	, regSetValue        -- :: HKEY -> String -> String -> IO ()
	, regSetValueEx      -- :: HKEY -> String -> RegValueType -> Addr -> Int -> IO ()
	, regSetStringValue  -- :: HKEY -> String -> String -> IO ()
	, regUnloadKey       -- :: HKEY -> String -> IO ()
	) where
-}

{-
 Registry API omissions:

   RegQueryMultipleValues()
   RegEnumKeyEx()

-}

import StdDIS
import Addr
import Word
import Win32Types
import Win32File
import Foreign.ForeignPtr

hKEY_CLASSES_ROOT :: HKEY
hKEY_CLASSES_ROOT =
  unsafePerformIO(
    prim_hKEY_CLASSES_ROOT
    >>= \ gc_result ->
    access_prim_hKEY_CLASSES_ROOT_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
    access_prim_hKEY_CLASSES_ROOT_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
    (makeForeignPtr gc_res1 gc_res3) >>= \ gc_res2 ->
    (return (gc_res2)))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_hKEY_CLASSES_ROOT" prim_hKEY_CLASSES_ROOT :: IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_hKEY_CLASSES_ROOT_gc_res3 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_hKEY_CLASSES_ROOT_gc_res1 :: Addr -> IO (Addr)
hKEY_CURRENT_CONFIG :: HKEY
hKEY_CURRENT_CONFIG =
  unsafePerformIO(
    prim_hKEY_CURRENT_CONFIG
    >>= \ gc_result ->
    access_prim_hKEY_CURRENT_CONFIG_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
    access_prim_hKEY_CURRENT_CONFIG_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
    (makeForeignPtr gc_res1 gc_res3) >>= \ gc_res2 ->
    (return (gc_res2)))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_hKEY_CURRENT_CONFIG" prim_hKEY_CURRENT_CONFIG :: IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_hKEY_CURRENT_CONFIG_gc_res3 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_hKEY_CURRENT_CONFIG_gc_res1 :: Addr -> IO (Addr)
hKEY_CURRENT_USER :: HKEY
hKEY_CURRENT_USER =
  unsafePerformIO(
    prim_hKEY_CURRENT_USER
    >>= \ gc_result ->
    access_prim_hKEY_CURRENT_USER_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
    access_prim_hKEY_CURRENT_USER_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
    (makeForeignPtr gc_res1 gc_res3) >>= \ gc_res2 ->
    (return (gc_res2)))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_hKEY_CURRENT_USER" prim_hKEY_CURRENT_USER :: IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_hKEY_CURRENT_USER_gc_res3 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_hKEY_CURRENT_USER_gc_res1 :: Addr -> IO (Addr)
hKEY_LOCAL_MACHINE :: HKEY
hKEY_LOCAL_MACHINE =
  unsafePerformIO(
    prim_hKEY_LOCAL_MACHINE
    >>= \ gc_result ->
    access_prim_hKEY_LOCAL_MACHINE_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
    access_prim_hKEY_LOCAL_MACHINE_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
    (makeForeignPtr gc_res1 gc_res3) >>= \ gc_res2 ->
    (return (gc_res2)))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_hKEY_LOCAL_MACHINE" prim_hKEY_LOCAL_MACHINE :: IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_hKEY_LOCAL_MACHINE_gc_res3 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_hKEY_LOCAL_MACHINE_gc_res1 :: Addr -> IO (Addr)
hKEY_USERS :: HKEY
hKEY_USERS =
  unsafePerformIO(
    prim_hKEY_USERS
    >>= \ gc_result ->
    access_prim_hKEY_USERS_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
    access_prim_hKEY_USERS_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
    (makeForeignPtr gc_res1 gc_res3) >>= \ gc_res2 ->
    (return (gc_res2)))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_hKEY_USERS" prim_hKEY_USERS :: IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_hKEY_USERS_gc_res3 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_hKEY_USERS_gc_res1 :: Addr -> IO (Addr)

regCloseKey :: HKEY -> IO ()
regCloseKey arg1 =
  withForeignPtr arg1 $ \ arg1 ->
  prim_regCloseKey arg1
  >>= \ gc_result ->
  access_prim_regCloseKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regCloseKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regCloseKey" prim_regCloseKey :: Ptr () -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regCloseKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regCloseKey_gc_failstring :: Addr -> IO (Addr)

-- Connects to a predefined registry handle on another computer.
regConnectRegistry :: MbString -> HKEY -> IO HKEY
regConnectRegistry gc_arg1 arg2 =
  (case gc_arg1 of {
      Nothing -> (return (nullAddr));
      (Just gc_arg1) -> (marshall_string_ gc_arg1) >>= \ (arg1) ->
			(return ((arg1)))
   }) >>= \ (arg1) ->
  withForeignPtr arg2 $ \ arg2 ->
  prim_regConnectRegistry arg1 arg2
  >>= \ gc_result ->
  access_prim_regConnectRegistry_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_regConnectRegistry_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_regConnectRegistry_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regConnectRegistry_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (makeForeignPtr gc_res1 gc_res3) >>= \ gc_res2 ->
       (return (gc_res2))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regConnectRegistry" prim_regConnectRegistry :: Addr -> Ptr () -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regConnectRegistry_gc_res3 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regConnectRegistry_gc_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regConnectRegistry_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regConnectRegistry_gc_failstring :: Addr -> IO (Addr)

regCreateKey :: HKEY -> String -> IO HKEY
regCreateKey arg1 gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regCreateKey arg1 arg2
  >>= \ gc_result ->
  access_prim_regCreateKey_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_regCreateKey_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_regCreateKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regCreateKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (makeForeignPtr gc_res1 gc_res3) >>= \ gc_res2 ->
       (return (gc_res2))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regCreateKey" prim_regCreateKey :: Ptr () -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regCreateKey_gc_res3 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regCreateKey_gc_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regCreateKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regCreateKey_gc_failstring :: Addr -> IO (Addr)

type RegCreateOptions = Int32

foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_OPTION_NON_VOLATILE" rEG_OPTION_NON_VOLATILE :: RegCreateOptions
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_OPTION_VOLATILE" rEG_OPTION_VOLATILE :: RegCreateOptions

type REGSAM = Int32

foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_kEY_ALL_ACCESS" kEY_ALL_ACCESS :: REGSAM
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_kEY_CREATE_LINK" kEY_CREATE_LINK :: REGSAM
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_kEY_CREATE_SUB_KEY" kEY_CREATE_SUB_KEY :: REGSAM
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_kEY_ENUMERATE_SUB_KEYS" kEY_ENUMERATE_SUB_KEYS :: REGSAM
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_kEY_EXECUTE" kEY_EXECUTE :: REGSAM
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_kEY_NOTIFY" kEY_NOTIFY :: REGSAM
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_kEY_QUERY_VALUE" kEY_QUERY_VALUE :: REGSAM
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_kEY_READ" kEY_READ :: REGSAM
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_kEY_SET_VALUE" kEY_SET_VALUE :: REGSAM
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_kEY_WRITE" kEY_WRITE :: REGSAM

